NLP TP/texts/robotics/robotics.stackexchange_0000102556.txt
Q:

rosdep refuses to run

This is on Ros Melodic on an Nvidia Jetson TX1 with Ubuntu 18.04. I'm trying to install the dependencies for the Zed-Ros-Wrapper.
Did my installation get corrupted? I removed and reinstalled Rosdep but that didn't change this error from coming up.
uriah@uriah-jetson:~$ rosdep update
Traceback (most recent call last):
  File "/usr/bin/rosdep", line 6, in <module>
    from pkg_resources import load_entry_point
  File "/usr/local/lib/python3.6/dist-packages/pkg_resources/__init__.py", line 1380
    raise SyntaxError(e) from e
                            ^
SyntaxError: invalid syntax

Originally posted by Rodolfo8 on ROS Answers with karma: 299 on 2022-10-16
Post score: 0

Original comments
Comment by Rodolfo8 on 2022-10-16:
uriah@uriah-jetson:~$ rosdep update
Traceback (most recent call last):
File "/usr/bin/rosdep", line 6, in 
from pkg_resources import load_entry_point

File "/usr/local/lib/python3.6/dist-packages/pkg_resources/init.py", line 1380
raise SyntaxError(e) from e

                        ^

SyntaxError: invalid syntax
Comment by Rodolfo8 on 2022-10-16:
It begins to look like the Python 2.7 is trying to use Numpy from Python 3.6 and is getting confused, perhaps

A:

sudo pip install -U rosdep rosinstall_generator vcstool rosinstall
pip install -U rosdep rosinstall_generator vcstool rosinstall
pip install --upgrade setuptools
rosdep update
These commands fixed the bad setup, whatever it was!

Originally posted by Rodolfo8 with karma: 299 on 2022-10-16
This answer was ACCEPTED on the original site
Post score: 0

Original comments
Comment by tfoote on 2022-10-16:
You're mixing python 2 and 3. Pip installing likely overlayed a python3 version of rosdep so you're only using python3 now. Note that you will have to keep everything in your pip environment up to date manually now.

